--- a/o-nas.html
+++ b/o-nas.html
@@ -38,7 +38,7 @@
                     <center><img src="img1.jpg" alt="img1" title="" style="margin-right:40px;"/>
                     <img src="img10.jpg" alt="img10" title="" style="margin-right:40px;" width="200" height="200"/>
                     <img src="img4.jpg" alt="img4" title="" width="200" height="200"/></center>
-                    <center><img src="barista.webp" title="" width="690" height="370"/></center>
+                    <center><img src="barista.jpg" title="" width="690" height="370"/></center>
     
                 </div>
                 
